--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,34 @@
-[tool.poetry]
-authors = ["Pablo Jesús González Rubio <gonzrubio.pablo@gmail.com>"]
-description = "FastAPI Production Archetype"
-name = "src"
+[project]
+name = "FastAPI-Production-Template"
 version = "0.1.0"
-readme = "README.md"
+description = "FastAPI Production Template"
+requires-python = ">=3.13"
+license = "MIT"
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-fastapi = "^0.109"
-httpx = "^0.25"
-psycopg2-binary = "^2.9"
-pydantic-settings = "^2.1"
-python-multipart = "^0.0"
-sqlalchemy = "^2.0"
-sqlalchemy-utils = "^0.41"
-uvicorn = "^0.24"
-asgi-correlation-id = "^4.3"
+dependencies = [
+    "asgi-correlation-id>=4.3.4",
+    "fastapi>=0.116.1",
+    "httpx>=0.28.1",
+    "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.10.1",
+    "python-multipart>=0.0.20",
+    "sqlalchemy>=2.0.42",
+    "sqlalchemy-utils>=0.41.2",
+    "uvicorn>=0.35.0",
+]
 
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.3.4"
-pylance = "^0.10.5"
-flake8 = "^7.0.0"
-pylint = "^3.1.0"
-pytest = "^8.1.1"
-pre-commit = "^3.6.2"
-poetry-plugin-export = "^1.7.1"
+[dependency-groups]
+dev = [
+    "asgi-lifespan>=2.1.0",
+    "flake8>=7.3.0",
+    "pre-commit>=4.2.0",
+    "pylance>=0.32.0",
+    "pylint>=3.3.7",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
+    "ruff>=0.12.7",
+]
+
 
 [tool.ruff]
 lint.select = ["ALL"]
@@ -50,7 +54,7 @@ lint.ignore = [
     "N803",
     "N815",
 ]
-target-version = "py310"
+target-version = "py313"
 line-length = 100
 
 [tool.flake8]
@@ -66,7 +70,3 @@ convention = "google"
 
 [tool.black]
 line-length = 100
-
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
