chore(docker): Change Postgres version from 15 to 17 and update examples of environment settings

--- a/src/.env.example
+++ b/src/.env.example
@@ -13,7 +13,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=mydatabase
 
 # PGADMIN
-PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
+PGADMIN_DEFAULT_EMAIL=admin@mail.com
 PGADMIN_DEFAULT_PASSWORD=admin
 
 # PROJECT SETTINGS
