--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   app:
     build:
@@ -19,7 +18,7 @@ services:
       - ./logs:/opt/logs/
 
   db:
-    image: postgres:15
+    image: postgres
     container_name: app-db
     restart: unless-stopped
     env_file:
