--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
           [
             "--fix",
             "--select=ALL",
-            "--ignore=RUF100,BLE001,COM812,ISC001,D100,D104,D105,D107,D205,D211,D212,E203,E266,ANN101,ANN102,ANN204,ANN401,S602,ERA001,PGH003,PLR0913,TRY400,N803,N815",
+            "--ignore=RUF100,BLE001,COM812,ISC001,D100,D104,D105,D107,D205,D211,D212,E203,E266,ANN204,ANN401,S602,ERA001,PGH003,PLR0913,TRY400,N803,N815,UP046",
             "--line-length=100",
           ]
       # Run the formatter.
