feat(config): Add APP_LOG_DIR variable and update database connection defaults

--- a/src/.env.example
+++ b/src/.env.example
@@ -3,14 +3,15 @@ SECRET_KEY=mysecretkey123
 ENVIRONMENT=DEV
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "https://myfrontendapp.com"]
 ALLOWED_HOSTS=["localhost", "127.0.0.1"]
-APP_LOG_FILE_PATH=logs/app.log # Set the same path in the docker-compose.yml file
+APP_LOG_DIR=logs # This path will be declareted in the docker-compose.yml file
+APP_LOG_FILE_PATH=${APP_LOG_DIR}/app.log
 
 # POSTGRESQL DATABASE
-POSTGRES_SERVER=localhost
-POSTGRES_USER=myappuser
-POSTGRES_PASSWORD=mypassword123
+POSTGRES_SERVER=db
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_PORT=5432
-POSTGRES_DB=mydatabase
+POSTGRES_DB=app-db
 
 # PGADMIN
 PGADMIN_DEFAULT_EMAIL=admin@mail.com
