feat(docker): Add wget, curl dependencies and wait-for-it script to Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,6 +10,8 @@ COPY ../requirements.txt .
 
 # Install in a single layer, and clean up in the same layer to minimize image size
 RUN apt-get update && apt-get install -y --no-install-recommends libpq-dev \
+    && apt-get install -y wget \
+    && apt-get install -y curl \
     && pip install --prefer-binary --no-cache-dir --upgrade pip \
     && pip install --prefer-binary --no-cache-dir -r requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
@@ -17,6 +19,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends libpq-dev \
 
 # Copy app code
 COPY ../src ./src
+
+# Copy scrip for check condition of other services
+COPY docker/wait-for-it.sh /usr/local/bin/wait-for-it.sh
+RUN chmod +x /usr/local/bin/wait-for-it.sh
 
 # Run app - exec form (doesn’t start a shell on its own)
 CMD ["uvicorn", "src.app:app", "--host", "0.0.0.0", "--port", "8000"]
